# neuro-dock

./: .env.example  .env.test  .gitignore  .neuro-dock.md  CONTRIBUTING.md  Dockerfile  FRONTEND_AI_IMPLEMENTATION_COMPLETE.md  FRONTEND_AI_INTEGRATION_STRATEGY.md  GIT_COMMIT_STRATEGY.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  MCP_SUCCESS_SUMMARY.md  MEMORY.md  MEMORY_DASHBOARD.md  MEMORY_DASHBOARD_IMPLEMENTATION.md  NEW_PROJECT_SETUP_GUIDE.md  PROJECT_STRUCTURE.md  README.md  README_NEW.md  README_OLD.md  REPOSITORY_READY.md  UI_GENERATION_GUIDE.md  UI_TEMPLATE_LIBRARY.md  VSCODE_INTEGRATION_COMPLETE.md  VSCODE_MCP_INTEGRATION_FINAL.md  VSCODE_MCP_SETUP.md  VSCODE_SETUP.md  VSCODE_SETUP_GUIDE.md  check_mcp_server.sh  deploy_neurodock.sh  docker-compose.yml  docker.sh  mcp-control.sh  neurodock.json  new_project_mcp_config.json  pyproject.toml  requirements.txt  setup.py  start_mcp_server.sh  (+2 more)
deployment/: staging_deploy.md
documentation/: discussion-system.md  mcp-implementation-guide.md  mcp-server-action-plan.md  official-mcp-specification.md
documentation/agents/: agent1-guide.md  agent2-setup.md  navigator-guide.md  (+1 more)
mcp-server/: .env.template  CLAUDE_DESKTOP_SETUP.md  IMPLEMENTATION_COMPLETE.md  README.md  neurodock-mcp-server-1.0.0.tgz  neurodock-mcp-server-2.0.0.tgz  package-lock.json  package-new.json  package.json
scripts/: cli.py  populate_sample_data.py  test_context_api.sh  test_health_api.sh  test_mcp_api.sh  test_memory_api.sh  test_project_api.sh  test_task_api.sh
tests/: test_mcp.py  test_memory_repository.py
(+58 files in other folders)
